--- a/cbcs-seminar/slides.Rmd
+++ b/cbcs-seminar/slides.Rmd
@@ -15,7 +15,7 @@ output:
 ---
 class: inverse
 # Systematic conservation planning
-* how should should we `$(manage)` different parts of `$(place)` to achieve `$(conservation)`?
+* how should we `$(manage)` different parts of `$(place)` to achieve `$(conservation)`?
 
 <div align = "center">
 <img src="http://parcc.web-staging.linode.unep-wcmc.org/system/comfy/cms/files/files/000/000/029/original/Figure15.jpg" height="400cm">
@@ -49,15 +49,27 @@ class: inverse
 class: inverse
 # Constraints
 * what must the solution do?
+
+<div align = "center">
+<img src="https://prioritizr.github.io/prioritizr/readme-figure/unnamed-chunk-10-1.png" height="400cm">
+</div>
+
+???
   * capture a target amount of habitat for each species?
   * be spatially contiguous?
   * contain areas that are already protected?
+  * not contain isolated planning units?
 
 ---
 class: inverse
 # Penalties
 * are there additional properties that must be traded off against the objective?
   * reduce fragmentation (eg. _BLM_ in Marxan)
+
+<div align = "center">
+<img
+src="http://marxan.net/downloads/uq_marxan_web_2/module2_map1.JPG" height="350cm"</div>
+</div>
 
 ---
 class: inverse
@@ -185,10 +197,11 @@ class: inverse
 
 ```{r, fig.height = 4, fig.width = 10.4}
 # create problem
-p1 <- problem(sim_pu_polygons, features = sim_features, cost_name = "cost") %>%
-  add_min_set_objective() %>%
-  add_relative_targets(0.2) %>%
-  add_binary_decisions()
+p1 <- problem(sim_pu_polygons, features = sim_features,
+             cost_name = "cost") %>%
+      add_min_set_objective() %>%
+      add_relative_targets(0.2) %>%
+      add_binary_decisions()
 # print object
 print(p1)
 ```
@@ -276,7 +289,7 @@ class: inverse
   * https://prioritizr.github.io/prioritizr/
 * Teaching resources
   * https://github.com/prioritizr/teaching
-* Post an issue
+* GitHub repository
   * https://github.com/prioritizr/prioritizr
 * Spatial analysis in R
   * http://www.springer.com/gp/book/9781461476177
@@ -288,9 +301,9 @@ class: inverse
 |  |  |  |  |
 | :---: | :---: | :---: | :---: |
 | Jeffrey Hanson | <img src="https://avatars3.githubusercontent.com/u/3610005?v=3&s=460" height="120cm"> | Richard Schuster | <img src="https://carleton.ca/biology/wp-content/uploads/schuster-200x200.jpg" height="120cm"> |
-| Matt Mackey-Strimas  | <img src="http://strimas.com/img/avatar.png" height="120cm"> | Matt Watts | <img src="http://marxan.net/downloads/uq_marxan_web_2/Matt_Watts_photo.jpg" height="120cm"> |
-| Peter Arcese | <img src="https://forestry-profiles.sites.olt.ubc.ca/files/2013/07/cropped-Peter-Arcese.jpg" height="120cm"> | Joe Bennett | <img src="https://carleton.ca/biology/wp-content/uploads/joe-bennett-head-shot1.jpg" height="120cm"> |
-| Hugh Possingham | <img src="https://www.smp.uq.edu.au/sites/smp.uq.edu.au/files/5108-007%20low%20res.jpg" height="120cm"> |
+| Matt Mackey-Strimas  | <img src="http://strimas.com/img/avatar.png" height="120cm"> | Nina Morell  | <img src="http://peter-arcese-lab.sites.olt.ubc.ca/files/2010/09/Nina_morrell-e1473727277398.jpg" height="120cm"> |
+| Matt Watts | <img src="http://marxan.net/downloads/uq_marxan_web_2/Matt_Watts_photo.jpg" height="120cm"> | Peter Arcese | <img src="https://forestry-profiles.sites.olt.ubc.ca/files/2013/07/cropped-Peter-Arcese.jpg" height="120cm"> |
+| Joe Bennett | <img src="https://carleton.ca/biology/wp-content/uploads/joe-bennett-head-shot1.jpg" height="120cm"> | Hugh Possingham | <img src="https://www.smp.uq.edu.au/sites/smp.uq.edu.au/files/5108-007%20low%20res.jpg" height="120cm"> |
 
 ---
 class: center, middle, inverse
